@@ -154,6 +154,9 @@ Mat([x^2 + x + a, 1])
 
 [;]
 [;]
+[;]
+[;]
+[;]
 
 [x^4 + 4*t 1]
 
@@ -193,6 +196,26 @@ Mat([x^2 + x + a, 1])
 
 [4 1]
 
+
+[x^4 + (79228162514264337593543950396*a^2 + 79228162514264337593543950395*a 
++ 79228162514264337593543950395)*x^3 + (a^2 + 11*a + 79228162514264337593543
+950396)*x^2 + (79228162514264337593543950393*a^2 + 7922816251426433759354395
+0389*a + 2)*x + (4*a^2 + 79228162514264337593543950396*a) 1]
+
+[x^2 + (2*a + 1)*x + (a^2 + a + 1) 2]
+
+[x^4 + x^3 + x^2 + x + 1 4]
+
+
+[x^10 + 79228162514264337593543950396*a^2*x^9 + (792281625142643375935439503
+95*a^2 + 79228162514264337593543950395*a)*x^8 + (8*a^2 + 7922816251426433759
+3543950393*a + 79228162514264337593543950396)*x^7 + (4*a^2 + 12*a + 79228162
+514264337593543950394)*x^6 + (79228162514264337593543950377*a^2 + 9*a + 7922
+8162514264337593543950395)*x^5 + a^2*x^4 + (2*a^2 + 2*a)*x^3 + (792281625142
+64337593543950389*a^2 + 4*a + 1)*x^2 + (79228162514264337593543950393*a^2 + 
+79228162514264337593543950385*a + 3)*x + (20*a^2 + 7922816251426433759354395
+0388*a + 1) 1]
+
 3
 3
 107
@@ -203,4 +226,4 @@ Mat([x^2 + x + a, 1])
 200
 1000
 200
-Total time spent: 3292
+Total time spent: 4192
