@@ -30,10 +30,13 @@ check(3)
 check(nextprime(2^100));
 
 t = ffgen(5^4,'t);
-factor((x^24-1)*t^0)
+factor(x^24-t^0)
 factormod(Pol(0),t)
+factormodSQF(Pol(0),t)
 factormod(Pol(1),t)
 factormod(Pol(1),t,1)
+factormodSQF(Pol(1),t)
+factormodDDF(Pol(1),t)
 factormod(x^4-t,t)
 factormod(x^4-t,t,1)
 factor(5*x^2+x+t)
@@ -44,6 +47,8 @@ P=(x-1)*(x-a)*(x-a^2)*(x-a-1)*subst(ffinit(p,2),x,x+a)*ffinit(p,4);
 polrootsmod(P)
 factormod(P)
 factormod(P,,1)
+factormodDDF(P)
+factormodSQF(P)
 
 check(P)=my(V=polrootsmod(P));for(i=1,#V,if(subst(P,x,V[i])!=0,error(P)));#V;
 a=ffgen([3,2],'a);check((x^2+a*x)^3*(x+1))
