@@ -20,7 +20,10 @@ factormod(Pol(0),2)
 factormod(Pol(0),2,1)
 factormod(Pol(1),2)
 factormod(Pol(1),2,1)
-factormod((x^2+x+1)*(x^3+x),2, 1)
+f=(x^2+x+1)*(x^3+x);
+factormod(f,2,1)
+factormodSQF(f,2)
+factormodDDF(x^4+x,2)
 polrootsmod(x^5+4*x^4+2*x^3+x^2+4*x+2,7)
 
 p=2^64+13;
@@ -37,6 +40,8 @@ factormod(x^4+3,p,1)
 factorcantor(x^2+1,p)
 factorcantor(Pol(0),p)
 factorcantor(Pol(1),p)
+factormodSQF(Pol(1),p)
+factormodDDF(Pol(1),p)
 
 polisirreducible((x^2+x+1)*Mod(1,2))
 polisirreducible((x^2+1)*Mod(1,p))
